# discord_shell_bot

./: Dockerfile  README.md  pyproject.toml
docker_composes/: default-docker-compose.yml
src/shell_bot/: __main__.py
src/shell_bot/config/: __init__.py  loader.py  model.py
